Add file changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     List of classes used
 
     Grid:
-    .container
+    .card
     .grid__row
     .grid__col--2
     .grid__col--3
@@ -28,7 +28,7 @@
     .theme__colors
 
     Typography:
-    .container
+    .card
     .link
     .blockquote
     .headline--primary
